--- a/assets/css/senate-ballot.css
+++ b/assets/css/senate-ballot.css
@@ -107,10 +107,13 @@ p.senate-option {
 }
 .ballot-box {
   display: inline-block;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   float: left;
+  padding: 5px;
   border: 1px solid black;
+  text-align: center;
+  font-size: 25px;
 }
 .ballot-party {
 	padding: 10px 0 0;
@@ -302,3 +305,4 @@ input#answer {
 .ref-logo {
   background-color: #f3e4c4;
 }
+
