--- a/assets/css/senate-ballot.css
+++ b/assets/css/senate-ballot.css
@@ -13,48 +13,32 @@ h1, h2, h3, h4 {
    font-family: Helvetica,Arial,sans-serif;
 }
 /* Senate */
-.responsive-container {
-  margin: 5px;
-}
-@media (max-width: 1300px){
-	.responsive-container {
-		overflow-y: hidden;
-		overflow-x: scroll;
-		border: 1px solid #666;
-	}
-}    
 .ballot-paper-sen {
-  display: flex;
-  flex-direction: column;
 	background: #fff url("/assets/images/senate-bp-official-block.png") top right no-repeat;
 	position: relative;
 }
-.ballot-header-title {
-	padding: 10px 0 0 90px;
+.ballot-header {
 	background: transparent url("/assets/images/senate-bp-state-block.png") 0 0 no-repeat;
 	font-size: 1.3em;
 	height: 56px;
 	margin-bottom: 20px;
 }
+.ballot-header-title {
+	padding: 10px 0 0 90px;
+}
 .ballot-option-a, .ballot-option-b {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
   line-height: 20px;
+  vertical-align: top;
 }
 .ballot-line {
-  width: 100%;
-  border-bottom: 15px solid black;
-  margin: 0px 0px 10px 0px;
+  height: 15px;
+  background: black;
+}
+.ballot-space {
+  height: 10px;
 }
 .option-a-header, .option-b-header {
 	width: 164px;
-  flex-shrink: 0;
-}
-.option-a-select, .option-b-select {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
 }
 .option-a-header h2, .option-b-header h2 {
 	letter-spacing: -1px;
@@ -86,7 +70,6 @@ p.senate-option {
 	background: none;
 }
 .ballot-position, .below-ballot-position {
-  flex-shrink: 0;
 	font-size: 1.1em;
 	width: 136px;
 	border-left: 1px solid #000;
@@ -107,13 +90,13 @@ p.senate-option {
 }
 .ballot-box {
   display: inline-block;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 20px;
   float: left;
-  padding: 5px;
+  padding: 10px 0px;
   border: 1px solid black;
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
 }
 .ballot-party {
 	padding: 10px 0 0;
@@ -125,6 +108,7 @@ p.party-title {
 	font-weight: 800;
 }
 .ballot-candidate-group {
+  display: block;
 	margin: 20px 0;
 	padding-left: 5px;
 }
