--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -1,10 +1,33 @@
+.preferences {
+}
+  
+.preferences .message {
+  padding: 15px;
+  text-align: center;
+}
+
+.choices {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+  width: 100vw;
+  height: 50vh;
+  overflow-x: scroll;
+}
+
+.choices .candidates {
+  list-style: none;
+  -webkit-padding-start: 0px;
+}
+
 .candidates {
   background: #dadada;
 }
-
 .candidate {
   background-color: white;
-  padding: 10px;
+  padding: 5px;
+  font-size: 14px;
   margin: 2px;
 }
 
@@ -18,6 +41,6 @@
 
 .candidate .party {
   display: block;
-  font-size: 15px;
+  font-size: 12px;
   font-weight: bold;
 }
