--- a/assets/css/senate-ballot.css
+++ b/assets/css/senate-ballot.css
@@ -1,3 +1,20 @@
+/* Printing */
+@media print {
+  body {
+     transform: scale(0.5);
+     transform-origin: 0% 0%;
+  }
+
+  .ballot-selection {
+    display: none;
+  }
+
+  body > div {
+     transform: rotate(90deg) translate(0px, -100%);
+     transform-origin: 0% 0%;
+  }
+}
+
 /* Bootstrap */
 *, : after, : before {
   box-sizing: border-box; 
@@ -16,6 +33,7 @@ h1, h2, h3, h4 {
 .ballot-paper-sen {
 	background: #fff url("/assets/images/senate-bp-official-block.png") top right no-repeat;
 	position: relative;
+  overflow-x: scroll;
 }
 .ballot-header {
 	background: transparent url("/assets/images/senate-bp-state-block.png") 0 0 no-repeat;
@@ -30,9 +48,10 @@ h1, h2, h3, h4 {
   line-height: 20px;
   vertical-align: top;
 }
-.ballot-line {
-  height: 15px;
-  background: black;
+.ballot-line td {
+  height: 0px;
+  font-size: 0px;
+  border-bottom: 15px solid black;
 }
 .ballot-space {
   height: 10px;
@@ -80,7 +99,6 @@ p.senate-option {
 	padding-left: 5px;
 }
 .below-ballot-position {
-	min-height: 500px;
 	padding-left: 5px;
 	padding-bottom: 20px;
 }
@@ -101,11 +119,17 @@ p.senate-option {
 .ballot-party {
 	padding: 10px 0 0;
 	font-weight: bold;
+  font-size: 15px;
+  text-transform: uppercase;
 	clear: both;
 }
 p.party-title {
+  min-height: 70px;
 	margin: 10px 0 50px 5px;
 	font-weight: 800;
+  line-height: 20px;
+  font-size: 15px;
+  text-transform: uppercase;
 }
 .ballot-candidate-group {
   display: block;
@@ -114,7 +138,7 @@ p.party-title {
 }
 .ballot-candidate {
 	margin-left: 45px;
-	font-size: 1em;
+	font-size: 0.72em;
 	line-height: 16px;
 }
 .ballot-candidate span {
