--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -24,7 +24,6 @@ body {
 .choices .ticket-party {
   font-weight: bold;
   font-size: 12px;
-  text-align: center;
   min-height: 20px;
 }
 
@@ -69,6 +68,7 @@ body {
   font-weight: bold;
 }
 
+.ticket-party button,
 .candidate button {
   float: left;
   margin-right: 5px;
