--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -4,7 +4,11 @@ body {
 
 .ballot-selection button {
   display: block;
+  width: 100%;
+  padding: 10px;
   margin: 3px;
+
+  text-align: center;
 }
 
 .preferences {
@@ -83,4 +87,59 @@ body {
 .choices button.increase,
 .choices button.decrease {
   display: none;
+}
+
+@media screen and (min-width: 900px) {
+  body {
+    overflow-x: scroll;
+    overflow-y: scroll;
+  }
+
+  .ballot-selection.only {
+    position: inherit;
+    margin: auto auto;
+
+    text-align: center;
+    font-size: 1.5em;
+  }
+  .ballot-selection.only select {
+    font-size: 1.5em;
+    padding: 10px;
+  }
+
+  .ballot-selection,
+  .preferences {
+    z-index: 1000;
+    box-sizing: border-box;
+    padding: 10px;
+    background: #eee;
+  }
+
+  .ballot-selection {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    width: 30vw;
+    height: 70px;
+  }
+
+  .preferences {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    width: 30vw;
+    height: 80vw;
+    margin-top: 70px;
+    overflow-y: scroll;
+  }
+
+  .preferences .candidate .name,
+  .preferences .candidate .party {
+    margin-left: 5px;
+  }
+
+  .choices {
+    display: inline-table;
+    margin-right: 15vw;
+  }
 }
