--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -109,13 +109,13 @@ body {
 
   .ballot-selection,
   .preferences {
-    z-index: 1000;
     box-sizing: border-box;
     padding: 10px;
     background: #eee;
   }
 
   .ballot-selection {
+    z-index: 1001;
     position: fixed;
     top: 0px;
     right: 0px;
@@ -124,12 +124,13 @@ body {
   }
 
   .preferences {
+    z-index: 1000;
     position: fixed;
     top: 0px;
     right: 0px;
     width: 30vw;
-    height: 80vw;
-    margin-top: 70px;
+    height: 100vh;
+    padding-top: 70px;
     overflow-y: scroll;
   }
 
