Added a simple splash page

--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -95,14 +95,14 @@ body {
     overflow-y: scroll;
   }
 
-  .ballot-selection.only {
+  .splash {
     position: inherit;
     margin: auto auto;
 
     text-align: center;
     font-size: 1.5em;
   }
-  .ballot-selection.only select {
+  .splash select {
     font-size: 1.5em;
     padding: 10px;
   }
